fixed data not showing up in modal

--- a/HDSMobileApp/app/scenarios/scenario2/custom.css
+++ b/HDSMobileApp/app/scenarios/scenario2/custom.css
@@ -1,4 +1,18 @@
-﻿/* Change background-color of menu bar */
+﻿.modal-footer {
+    border-top: 0;
+    padding-top: 0;
+}
+hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.modal {
+/*solve large modal scrolling issue*/
+    position: absolute;
+}
+
+
+/* Change background-color of menu bar */
 
     .navbar-default {
        background-color: #333333;
